installed dep&lib

--- a/package.json
+++ b/package.json
@@ -1,12 +1,33 @@
 {
-  "name": "node-testing2-project",
+  "name": "testing2-project",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/LambdaSchool/node-testing2-project.git"
+  },
+  "description": "## Instructions",
+  "bugs": {
+    "url": "https://github.com/LambdaSchool/node-testing2-project/issues"
+  },
+  "homepage": "https://github.com/LambdaSchool/node-testing2-project#readme",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "dotenv": "^10.0.0",
+    "eslint": "^8.2.0",
+    "express": "^4.17.1",
+    "gitignore": "^0.7.0",
+    "knex": "^0.95.14",
+    "sqlite3": "^5.0.2",
+    "supertest": "^6.1.6"
+  },
+  "devDependencies": {
+    "jest": "^27.3.1",
+    "nodemon": "^2.0.15"
   }
 }
